fix x-scrollbar used to appear for no fkn reason

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 
 body,
 html {
-	width: 800px;
+	margin: 0;
+	padding: 0;
+	width: 700px;
 	height: 600px;
 	overflow-x: hidden !important;
 	background-color: #111;
